hphp/test/zend/good/ext/date/tests/bug33056.php
<?php
date_default_timezone_set("GMT");
echo strtotime('20050518t090000Z')."\n";
echo strtotime('20050518t091234Z')."\n";
echo strtotime('20050518t191234Z')."\n";
?>